--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Tree parser for Stellar XDR types that renders to JSON",
   "dependencies": {
     "@stellar/stellar-sdk": "^12.0.0-rc.3",
+    "commander": "^12.1.0",
     "lodash": "^4.17.21",
     "tslib": "^2.6.2",
     "typescript": "^5.4.5"
